Started writing card viewer directive.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,18 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-6">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					front
-				</div>
-				<div class="panel-body">
-					front of the card
-				</div>
-			</div>
-			<button type="button" class="btn btn-default">Next</button>
-			<button type="button" class="btn btn-default">Back</button>
-			<button type="button" class="btn btn-default">Flip</button>
-			<button type="button" class="btn btn-default">Edit</button>
+			<card-viewer></card-viewer>
 		</div>
 		<div class="col-md-6">
 			<textarea class="form-control" rows="10">deck</textarea>
