Refactored a lot of controller code. Basic implementation done.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,14 +6,14 @@
 					{{presenter.content}}
 				</div>
 			</div>
-			<button type="button" class="btn btn-default" ng-click="presenter.next()">Next</button>
-			<button type="button" class="btn btn-default" ng-click="presenter.back()">Back</button>
-			<button type="button" class="btn btn-default" ng-click="presenter.flip()">Flip</button>
+			<button type="button" class="btn btn-default" ng-click="presenter.next(deckService.deck)">Next</button>
+			<button type="button" class="btn btn-default" ng-click="presenter.back(deckService.deck)">Back</button>
+			<button type="button" class="btn btn-default" ng-click="presenter.flip(deckService.deck)">Flip</button>
 			<button type="button" class="btn btn-default">Edit</button>
 		</div>
 		<div class="col-md-6">
-			<textarea class="form-control" rows="10">deck</textarea>
-			<button type="button" class="btn btn-default">Parse</button>
+			<textarea class="form-control" rows="10" ng-model="rawText"></textarea>
+			<button type="button" class="btn btn-default" ng-click="parse(rawText, deckService)">Parse</button>
 		</div>
 	</div>
 </div>
