--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,9 +2,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<div class="panel panel-default">
-				<div class="panel-body">
-					{{presenter.content}}
-				</div>
+				<div class="panel-body" ng-bind-html="presenter.content"></div>
 			</div>
 			<button type="button" class="btn btn-default" ng-click="presenter.next(deckService.deck)">Next</button>
 			<button type="button" class="btn btn-default" ng-click="presenter.back(deckService.deck)">Back</button>
