--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-6" ng-class="{'col-md-offset-3': !editing}">
 			<div class="panel panel-default">
 				<div class="panel-body" ng-bind-html="presenter.content"></div>
 			</div>
