--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,9 @@
 <div class="container">
 	<div class="row">
+		<button type="button" class="btn btn-default">Github</button>
+		<button type="button" class="btn btn-default">Import</button>
+	</div>
+	<div class="row">
 		<div class="col-md-6" ng-class="{'col-md-offset-3': !editing}">
 			<div class="panel panel-default">
 				<div class="panel-body" ng-bind-html="presenter.content"></div>
