--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,31 @@
 #quickEditBox {
 	font-family: monospace
 }
+
+.card-container {
+	position: relative;
+}
+
+.card-content {
+	position: relative;
+	width: 400px;
+	height: 200px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.right-arrow {
+	display: block;
+	position: absolute;
+	top: 0px;
+	height: 100%;
+	right: 0px;
+}
+
+.left-arrow {
+	display: block;
+	position: absolute;
+	top: 0px;
+	height: 100%;
+	left: 0px;
+}
