--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,34 +1,31 @@
 <div class="container" ng-controller="ViewerCtrl as viewer">
 	<div class="row" ng-controller="ImportCtrl as importer">
-		<input type="file">
-		<button type="button" class="btn btn-default" ng-click="importer.onHddClick()"><span class="glyphicon glyphicon-hdd"></span></button>
+		<button type="button" class="btn" ng-click="importer.onHddClick()"><i class="icon-hdd"></i></button>
 	</div>
 	<div class="row">
-		<div class="col-lg-6" ng-class="{'col-lg-offset-3': !viewer.editorData.editing}">
-			<div class="panel panel-default">
-				<div class="panel-body">
-					<button type="button" class="btn btn-default" ng-click="viewer.shuffle()"><span class="glyphicon glyphicon-random"></span></button>
-					<button type="button" class="btn btn-default" ng-click="viewer.clear()"><span class="glyphicon glyphicon-refresh"></span></button>
-					<button type="button" class="btn btn-default" ng-click="viewer.changeSideMode()"><span class="glyphicon" ng-class="{ 'glyphicon-unchecked': !viewer.presenter.frontFirst, 'glyphicon-stop': viewer.presenter.frontFirst }"></span></button>
+		<div class="span6" ng-class="{offset3: !viewer.editorData.editing}">
+			<div class="well">
+				<button type="button" class="btn btn-default" ng-click="viewer.shuffle()"><i class="icon-random"></i></button>
+				<button type="button" class="btn btn-default" ng-click="viewer.clear()"><i class="icon-refresh"></i></button>
+				<button type="button" class="btn btn-default" ng-click="viewer.changeSideMode()"><i class="glyphicon" ng-class="{ 'icon-unchecked': !viewer.presenter.frontFirst, 'icon-stop': viewer.presenter.frontFirst }"></i></button>
 
-					<div class="card-container">
-						<button type="button" class="left-arrow btn btn-default" ng-click="viewer.presenter.back(viewer.deckData.deck)">
-							<span class="glyphicon glyphicon-circle-arrow-left"></span>
-						</button>
-						<div class="card-content" ng-bind-html="viewer.presenter.content"></div>
-						<button type="button" class="right-arrow btn btn-default" ng-click="viewer.presenter.next(viewer.deckData.deck)">
-							<span class="glyphicon glyphicon-circle-arrow-right"></span>
-						</button>
-					</div>
-
-					<button type="button" class="btn btn-default" ng-click="viewer.presenter.flip(viewer.deckData.deck)"><span class="glyphicon glyphicon-repeat"></span></button>
+				<div class="card-container">
+					<button type="button" class="left-arrow btn btn-default" ng-click="viewer.presenter.back(viewer.deckData.deck)">
+						<i class="icon-circle-arrow-left"></i>
+					</button>
+					<div class="card-content" ng-bind-html="viewer.presenter.content"></div>
+					<button type="button" class="right-arrow btn btn-default" ng-click="viewer.presenter.next(viewer.deckData.deck)">
+						<i class="icon-circle-arrow-right"></i>
+					</button>
 				</div>
+
+				<button type="button" class="btn btn-default" ng-click="viewer.presenter.flip(viewer.deckData.deck)"><i class="icon-repeat"></i></button>
 			</div>
 		</div>
-		<div class="col-lg-6" ng-controller="EditorCtrl as editor" ng-class="{'col-lg-offset-3': !viewer.editorData.editing}">
-			<button type="button" class="btn btn-default btn-block" ng-click="editor.onToggle()">{{editor.data.editing ? 'Done' : 'Edit' }}</button>
+		<div class="span6" ng-controller="EditorCtrl as editor" ng-class="{offset3: !viewer.editorData.editing}">
+			<button type="button" class="btn btn-default btn-block" ng-click="editor.onToggle()"><i class="icon-edit"></i></button>
 			<div ng-show="editor.data.editing">
-				<textarea id="quickEditBox" class="form-control" rows="10" ng-model="editor.data.rawText"></textarea>
+				<textarea id="quickEditBox" rows="10" ng-model="editor.data.rawText" class="input-block-level"></textarea>
 				<button type="button" class="btn btn-default btn-block" ng-click="editor.onParse()">Parse</button>
 			</div>
 		</div>
