Added some css classes to buttons on the open file dialog.

--- a/app/templates/import_dialog.html
+++ b/app/templates/import_dialog.html
@@ -6,6 +6,6 @@
 	<input type="file" file-model="file" on-change="onChange(file)">
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn" ng-click="open()">Open</button>
-	<button type="button" class="btn" ng-click="cancel()">Cancel</button>
+	<button type="button" class="btn btn-primary" ng-click="open()">Open</button>
+	<button type="button" class="btn btn-danger" ng-click="cancel()">Cancel</button>
 </div>
