Switched to bootstrap theme (flatly).

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,26 +1,26 @@
 <div class="container" ng-controller="ViewerCtrl as viewer">
 	<div class="row" ng-controller="ImportCtrl as importer">
-		<button type="button" class="btn" ng-click="importer.onHddClick()"><i class="icon-hdd"></i></button>
+		<button type="button" class="btn" ng-click="importer.onHddClick()"><i class="fa fa-hdd-o"></i></button>
 	</div>
 	<div class="row">
 		<div class="span6" ng-class="{offset3: !viewer.editorData.editing}">
 			<div class="well">
-				<button type="button" class="btn btn-default" ng-click="viewer.shuffle()"><i class="icon-random"></i></button>
-				<button type="button" class="btn btn-default" ng-click="viewer.clear()"><i class="icon-refresh"></i></button>
-				<button type="button" class="btn btn-default" ng-click="viewer.changeSideMode()"><i class="glyphicon" ng-class="{ 'icon-unchecked': !viewer.presenter.frontFirst, 'icon-stop': viewer.presenter.frontFirst }"></i></button>
-				<button type="button" class="btn" ng-click="viewer.onEditToggle()" ng-class="{disabled: viewer.editing}"><i class="icon-edit"></i></button>
+				<button type="button" class="btn btn-default" ng-click="viewer.shuffle()"><i class="fa fa-random"></i></button>
+				<button type="button" class="btn btn-default" ng-click="viewer.clear()"><i class="fa fa-refresh"></i></button>
+				<button type="button" class="btn btn-default" ng-click="viewer.changeSideMode()"><i class="fa" ng-class="{ 'fa-square-o': !viewer.presenter.frontFirst, 'fa-square': viewer.presenter.frontFirst }"></i></button>
+				<button type="button" class="btn" ng-click="viewer.onEditToggle()" ng-class="{disabled: viewer.editing}"><i class="fa fa-pencil-square"></i></button>
 
 				<div class="card-container">
 					<button type="button" class="left-arrow btn btn-default" ng-click="viewer.presenter.back(viewer.deckData.deck)">
-						<i class="icon-circle-arrow-left"></i>
+						<i class="fa fa-arrow-left"></i>
 					</button>
 					<div class="card-content" ng-bind-html="viewer.presenter.content"></div>
 					<button type="button" class="right-arrow btn btn-default" ng-click="viewer.presenter.next(viewer.deckData.deck)">
-						<i class="icon-circle-arrow-right"></i>
+						<i class="fa fa-arrow-right"></i>
 					</button>
 				</div>
 
-				<button type="button" class="btn btn-default" ng-click="viewer.presenter.flip(viewer.deckData.deck)"><i class="icon-repeat"></i></button>
+				<button type="button" class="btn btn-default" ng-click="viewer.presenter.flip(viewer.deckData.deck)"><i class="fa fa-repeat"></i></button>
 			</div>
 		</div>
 		<div class="span6" ng-controller="EditorCtrl as editor" ng-class="{offset3: viewer.editing}">
