--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -23,11 +23,16 @@
 				<button type="button" class="btn btn-default" ng-click="viewer.presenter.flip(viewer.deckData.deck)"><i class="fa fa-repeat"></i></button>
 			</div>
 		</div>
-		<div class="span6" ng-controller="EditorCtrl as editor" ng-class="{offset3: viewer.editing}">
+		<div class="span6 offset3" ng-controller="EditorCtrl as editor">
 			<div ng-show="viewer.editing">
 				<textarea id="quickEditBox" rows="10" ng-model="editor.data.rawText" class="input-block-level"></textarea>
 				<button type="button" class="btn btn-primary" ng-click="editor.onParse()">Parse</button>
 				<button type="button" class="btn btn-danger" ng-click="viewer.onEditToggle()">Cancel</button>
+			</div>
+			<div class="alert alert-error" ng-show="editor.deckData.error !== null">
+				<button type="button" class="close" aria-hiddin="true" ng-click="editor.removeError()">&times;</button>
+				<strong>{{editor.deckData.error.name}}</strong>
+				<p>Line: {{editor.deckData.error.line}} in column {{editor.deckData.error.column}} :: {{editor.deckData.error.message}}</p>
 			</div>
 		</div>
 	</div>
