--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,19 +3,75 @@
 }
 
 .ace_editor {
-  height: 300px;
+	height: 300px;
+	margin-bottom: 10px;
+	border: solid;
+	border-width: 3px;
+	border-color: #dcdcdc;
 }
 
 .card-content {
-	position: relative;
-	min-height: 200px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
+	text-align: center;
 }
 
 .card-container {
 	position: relative;
-	min-width: 400px;
+	padding: 20px 20px;
+	width: 440px;
+	height: 250px;
+	margin: 10px auto;
+}
+
+.editor-container {
+	position: relative;
+	width: 480px;
+	margin: 10px auto;
+}
+.editor-container button {
+	width: 218px;
+	margin: 0px auto;
+}
+
+.card {
+	display: flex;
+	height: 100%;
+	width: 80%;
+	margin: 0px 10%;
+}
+.card-content-container {
+	position: relative;
+	display: flex;
+	height: 200px;
+}
+.right-arrow-btn {
+	position: absolute;
+	height: 100%;
+	width: 10%;
+	top: 0px;
+	right: 0px;
+	cursor: pointer;
+}
+.right-arrow-btn:hover {
+
+}
+.right-arrow {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+}
+.left-arrow-btn {
+	position: absolute;
+	height: 100%;
+	width: 10%;
+	top: 0px;
+	left: 0px;
+	cursor: pointer;
+}
+.left-arrow {
+	position: absolute;
+	top: 50%;
+	right: 50%;
 }
 
 /*
