--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,10 @@
 
 .editor-txt {
 	height: 300px;
+	width: 100%;
 	margin-bottom: 10px;
 	font-family: monospace;
+	box-sizing: border-box;
 }
 
 .card-content {
